# RustProject

./: README.md
code/image-converter/: Cargo.toml
code/image-converter/examples/: png_to_jpeg.rs
code/image-converter/src/: lib.rs  main.rs
code/image-converter/src/converter/: errors.rs  formats.rs  main_converter.rs  mod.rs  webp_converter.rs
code/image-converter/src/frontend/: mod.rs
code/image-converter/src/utils/: file_io.rs
code/image-converter/tests/: integration.rs
code/image_converter/: Cargo.toml
code/image_converter/examples/: conversion.rs  png_gif.rs  png_jpeg.rs  png_webp.rs
code/image_converter/src/: lib.rs  main.rs
code/image_converter/src/app_utils/: file_io.rs  mod.rs
code/image_converter/src/backend/: mod.rs
code/image_converter/src/converter/: bmp_converter.rs  errors.rs  formats.rs  gif_converter.rs  ico_converter.rs  jpeg_converter.rs  main_converter.rs  mod.rs  png_converter.rs  webp_converter.rs
code/image_converter/src/frontend/: events.rs  ui.rs
code/image_converter/tests/: integration.rs
